<resources>
    <string name="app_name">Theo Dõi Sức Khỏe</string>
    <string name="tab_text_1">Cân nặng</string>
    <string name="tab_text_2">Thức ăn</string>
    <string name="tab_text_3">Thống kê</string>
    <string name="tab_text_4">Chỉ số</string>
    <string name="tab_text_5">BMI</string>
    <string name="date">Ngày</string>
    <string name="cancan">Cân Nặng</string>
    <string name="uong">Uống</string>
    <string name="tap">Tập</string>
    <string name="note">Ghi Chú</string>
    <string name="nottap">Không tập thể dục</string>
    <string name="notuong">Uống thiếu nước</string>
    <string name="updatetap">Tập Thể dục</string>
    <string name="updateuong">Uống đủ nước(>2l)</string>
    <string name="upda">Uống đủ nước</string>
    <string name="luu">LƯU</string>
    <string name="huy">HỦY</string>
    <string name="sua">SỬA</string>
    <string name="chedo">Chế độ ăn</string>
    <string name="start">Bắt Đầu</string>
    <string name="end">Kết thúc</string>
    <string name="maxkg">Tối đa</string>
    <string name="minkg">Tối thiểu</string>
    <string name="khoangthoigian">Khoảng thời gian</string>
    <string name="Thongke">Thống kê</string>
    <string name="nhanxet">Nhận xét chung</string>
    <string name="up">Tăng</string>
    <string name="down">Giảm</string>
    <string name="Buasang">Bữa Sáng</string>
    <string name="Buatrua">Bữa Trưa</string>
    <string name="Buatoi">Bữa Tối</string>
    <string name="Buaphu">Bữa Phụ</string>
    <string name="Chieucao">Chiều cao</string>
    <string name="tuoi">Tuổi</string>
    <string name="Gioitinh">Giới tính</string>
    <string name="dulieu1">Dữ liệu cơ thể</string>
    <string name="ketqua">Kết quả phân tích</string>
    <string name="bmi">BMI(Chỉ số khối cơ thể)</string>
    <string name="bmr">BMR(Tỷ lệ trao đổi chất cơ bản)</string>
    <string name="bt">Bình thường</string>
    <string name="gay">Thiếu cân</string>
    <string name="thuacan">Thừa cân</string>
    <string name="beophi">Béo phì</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="thanhcong">Cập nhật thành công</string>
    <string name="saican">Sai cân</string>
    <string name="uoguov">Uống nước</string>
    <string name="nhapdu">Vui lòng nhập đủ các mục</string>
    <string name="ngoaiphamvi">Số Ngày chọn không trong phạm vi</string>
    <string name="kthay">Không thay đổi</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="xacnhanxoa">Bạn có muốn xóa thông tin ngày</string>
    <string name="thongbao">Thông Báo</string>
    <string name="Thucan">Thức Ăn</string>
    <string name="xoathanhcong">Bạn đã xóa thành công</string>
    <string name="saidinhdang">Sai định dạng</string>

</resources>