<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal"
    android:weightSum="10">
    <TextView
        android:id="@+id/ngay"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/cannang"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancan"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tap"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tap"/>
    <TextView

        android:id="@+id/uong"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uong"/>
    <TextView

        android:id="@+id/note"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/note"/>

</LinearLayout>