<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_conner_16"
        android:padding="20dp"
        android:text="@string/Gioitinh"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bang"

            android:padding="20dp"
            android:text="@string/nam"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bang"

            android:padding="20dp"
            android:text="@string/nu"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button

            android:id="@+id/btn_huy1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/naubutton"
            android:text="@string/huy"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </LinearLayout>


</LinearLayout>