<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="5dp"
    >
<LinearLayout android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:weightSum="20"
    android:layout_weight="0.5"
    android:layout_gravity="center">
<TextView
    android:layout_margin="2dp"
  android:textStyle="bold"
    android:textColor="#f000"
    android:layout_weight="5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/date"/>
    <TextView
        android:layout_margin="2dp"
        android:textStyle="bold"
        android:textColor="#f000"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancan"/>
    <TextView
        android:layout_margin="2dp"
        android:textStyle="bold"
        android:textColor="#f000"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tap"
        android:gravity="center"/>
    <TextView
        android:layout_margin="2dp"
        android:textStyle="bold"
        android:textColor="#f000"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uong"
        android:gravity="center"/>
    <TextView
        android:layout_margin="2dp"
        android:textStyle="bold"
        android:textColor="#f000"
        android:layout_weight="9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/note"/>
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5">

        <ListView
            android:id="@+id/list1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="10dp" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quill"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end|bottom"/>

    </RelativeLayout>

</LinearLayout>