<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:weightSum="10"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/ngayan"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#534340"
            android:text="@string/Buasang"/>
        <TextView
            android:id="@+id/trua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#534340"
            android:text="@string/Buatrua"/>
        <TextView
            android:id="@+id/toi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#534340"
            android:text="@string/Buatoi"/>
        <TextView
            android:id="@+id/phu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#534340"
            android:text="@string/Buaphu"/>
    </LinearLayout>
</LinearLayout>