<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/ngayview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_conner_16"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancan"
        android:textColor="#FAF6F6"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/date"
            android:textColor="#F000"
            android:textSize="30dp" />

        <TextView
            android:background="@drawable/border"
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="26dp"
            android:ems="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/cancan"
            android:textColor="#F000"
            android:textSize="30dp" />

        <EditText
            android:padding="4dp"
            android:background="@drawable/border"
            android:id="@+id/updateCanang"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:ems="9"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/updatetap"
            android:textColor="#F000"
            android:textSize="30dp" />

        <CheckBox
            android:id="@+id/checktap"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="113dp"
            android:layout_marginBottom="2dp"
            android:padding="1dp"
            android:button="@null"
            android:background="@drawable/customcheck"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateuong"
            android:textColor="#F000"
            android:textSize="30dp" />

        <CheckBox
            android:id="@+id/checkuong"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="2dp"
            android:button="@null"
            android:background="@drawable/customcheck"
            android:scaleType="fitXY"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/note"
            android:textColor="#F000"
            android:textSize="30dp" />

        <EditText
            android:padding="4dp"
            android:id="@+id/updateghichu"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
           android:layout_gravity="center"
            android:background="@drawable/border"
            android:ems="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/updateluu"
            android:background="@drawable/btnbang"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/luu"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updatehuy"
            android:background="@drawable/btnbang"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/huy"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>